index-stylesheet.css
#about {
    background: url(https://content.w3bg0r3.gallery/back01-2.jpg);
    border: 4px double #000020;
    bottom: 0;
    display: none;
    left: -8px;
    max-width: 200px;
    position: absolute;
    transform: translateY(calc(100% + 16px));
    z-index: 1;
}
#about-button {
    display: none;
}
#about-button:checked + #about {
    display: block;
}
#about-button:checked ~ #about-button-label::after {
    content: ' ▴';
}
#about-button:checked ~ #about-button-label::before {
    content: '▴ ';
}
#about-button-label {
    bottom: 0;
    cursor: pointer;
    font-size: 24px;
    left: 0;
    margin: 8px 12px;
    position: absolute;
}
#about-button-label::after {
    content: ' ▾';
}
#about-button-label::before {
    content: '▾ ';
}
#about-text {
    background: url(https://content.w3bg0r3.gallery/back01-2-dark.jpg);
    border: 4px double #000020;
    display: block;
    font-family: 'Chivo Mono', monospace;
    font-size: 1rem;
    margin: 12px;
    margin: 4px;
    padding: 12px;
    text-shadow: none;
}
#about-text a {
    color: white;
}
body {
    color: white;
    margin: 0;
    padding: 0;
    font-family: 'Chivo Mono', monospace;
    font-size: 1rem;
}
#body-background {
    background: url(https://content.w3bg0r3.gallery/newstars.gif);
    height: 100lvh;
    position: fixed;
    width: 100lvw;
    z-index: -1;
}
header {
    align-items: center;
    background-image: url(https://content.w3bg0r3.gallery/back01-1.jpg);
    border: 8px double #000020;
    display: flex;
    font-family: 'VT323', monospace;
    font-size: 56px;
    font-weight: bold;
    height: 64px;
    justify-content: center;
    margin: 0 8px 8px 8px;
    padding: 8px;
    position: relative;
}
header span, header label {
    text-shadow:
            4px 4px black,
            -4px 4px black,
            4px -4px black,
            -4px -4px black,
            0px 4px black,
            0px -4px black,
            4px 0px black,
            -4px 0px black;
    -webkit-user-select: none; 
    -ms-user-select: none;
    user-select: none;
}
.item {
    align-items: center;
    display: flex;
    justify-content: center;
    opacity: 0;
    overflow-x: auto;
    overflow-y: hidden;
    transition: opacity 0.25s;
}
.item img:hover {
    cursor: pointer;
}
#items {
    display: grid;
    grid-auto-flow: dense;
    grid-auto-rows: 8px;
    grid-template-columns: repeat(auto-fill, 8px);
    position: relative;
}
#items-background {
    background: url(https://content.w3bg0r3.gallery/newtwinklestars.gif);
    filter: brightness(0.75) contrast(2);
    height: 100%;
    opacity: 0.5;
    position: absolute;
    width: 100%;
    z-index: -1;
}
#logo {
    height: 48px;
    margin: 0 2px;
    position: relative;
    top: 4px;
    width: 48px;
}
main {
    margin: 0 auto;
    max-width: 800px;
    padding: 8px 0 24px 0;
}
#lightbox {
    align-items: center;
    background: rgba(0, 0, 0, 0.75);
    display: none;
    height: 100lvh;
    justify-content: center;
    left: 0;
    position: fixed;
    top: 0;
    width: 100lvw;
}
#lightbox:hover {
    cursor: pointer;
}
#load-more-button {
    cursor: pointer;
    opacity: 0;
    transition: opacity 0.25s;
}
.page-navigation {
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 16px 0 0 0;
    text-align: center;
}
.page-navigation a {
    text-decoration: none;
    color: white;
}
@media screen and (min-width: 280px) {
    :root {
        --max-column-span: 35;
    }
}
@media screen and (min-width: 300px){
    :root {
        --max-column-span: 37;
    }
}
@media screen and (min-width: 360px) {
    :root {
        --max-column-span: 45;
    }
}
@media screen and (min-width: 380px) {
    :root {
        --max-column-span: 47;
    }
}
@media screen and (min-width: 400px) {
    :root {
        --max-column-span: 50;
    }
}
@media screen and (min-width: 440px) {
    :root {
        --max-column-span: 55;
    }
}
@media screen and (min-width: 480px) {
    :root {
        --max-column-span: 60;
    }
}
@media screen and (min-width: 520px) {
    :root {
        --max-column-span: 65;
    }
}
@media screen and (min-width: 560px) {
    :root {
        --max-column-span: 70;
    }
}
@media screen and (min-width: 600px) {
    :root {
        --max-column-span: 75;
    }
}
@media screen and (min-width: 680px) {
    :root {
        --max-column-span: 85;
    }
}
@media screen and (min-width: 760px) {
    :root {
        --max-column-span: 95;
    }
}
@media screen and (min-width: 800px) {
    :root {
        --max-column-span: 100;
    }
}
@media screen and (max-width: 440px) {
    header {
        align-items: start;
        height: 84px;
    }
    #logo {
        top: 8px;
    }
}

